log
Fri Mar 18 00:57:22 UTC 2022: 
 tests:  0|6
total_score: 0/70
d830910
Fri Mar 18 02:47:37 UTC 2022: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:2: error: expected ‘,’ or ‘;’ before ‘if’
  if (lista == NULL)
  ^~
list.c:35:2: error: ‘else’ without a previous ‘if’
  else
  ^~~~
list.c:40:2: error: expected ‘;’ before ‘}’ token
  }
  ^
Compilation failed
3334267
Fri Mar 18 02:49:35 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
06b5475
Fri Mar 18 03:07:06 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 15/70
0148411
Fri Mar 18 03:10:29 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
0d06f4b
Fri Mar 18 03:14:15 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:55:5: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  if (list->current != NULL)
     ^
list.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
c3ab0fc
Fri Mar 18 03:16:23 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:55:5: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  if ((list->current) != NULL)
     ^
list.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a2bd23f
Fri Mar 18 03:16:58 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
1c9a8ee
Fri Mar 18 03:21:12 UTC 2022: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:59:3: error: expected ‘;’ before ‘else’
   else
   ^~~~
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
ceeff36
Fri Mar 18 03:21:52 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|0
   [ INFO ] llamando a firstList
e242d29
Fri Mar 18 03:22:59 UTC 2022: 
 list.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  1|0
   [ INFO ] llamando a firstList
5689bd3
Fri Mar 18 03:23:28 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d99fb68
Fri Mar 18 03:24:32 UTC 2022: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|0
8e760e4
Fri Mar 18 03:25:39 UTC 2022: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
10287bc
Fri Mar 18 03:26:49 UTC 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
7ed7f10
Fri Mar 18 03:27:52 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
65b3bd1
Fri Mar 18 03:32:11 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
642504b
Fri Mar 18 03:35:22 UTC 2022: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  9|3
total_score: 35/70
74fb17a
Fri Mar 18 03:43:03 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
f657f97
Fri Mar 18 03:46:00 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e9267a3
